<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.android.justjava2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Name_editTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:hint="@string/hintEditTextView"
            android:inputType="textMultiLine"
            android:maxLines="2" />

        <TextView
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:onClick="onCheckboxClicked"
            android:text="@string/Toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whippedCream"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:onClick="onCheckboxClicked"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/WhippedCream"
            android:textSize="@dimen/textSize" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:onClick="onCheckboxClicked"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/Chocolate"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/Quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_hight"
                android:layout_marginLeft="@dimen/marginLeft1"
                android:layout_marginTop="@dimen/marginTop"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="@dimen/wrap_content"
                android:layout_height="@dimen/wrap_content"
                android:layout_marginLeft="@dimen/marginLeft1"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000"
                android:textSize="@dimen/textSize" />

            <Button
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_hight"
                android:layout_marginLeft="@dimen/marginLeft1"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginTop="@dimen/marginTop"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/Price"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/order_summary"
            android:textColor="#000000"
            android:textSize="@dimen/textSizeOutput" />

        <Button
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/marginTop"
            android:onClick="submitOrder"
            android:text="@string/Order"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>
